--- a/site/index.dev.html
+++ b/site/index.dev.html
@@ -5,14 +5,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width">
 
-  <title>Refresh</title>
+  <title>Reload</title>
 
-  <!-- Refresh -->
+  <!-- Reload -->
   <script class="removeFromRenderedPage" src='vendor/highlight.pack.js'></script>
   <script src='vendor/jquery.js'></script>
+  <script src='vendor/medium-zoom.js'></script>
   <script class="removeFromRenderedPage" src='vendor/stylus.min.js'></script>
   <!-- <script src='legacy.js'></script> -->
-  <script src='Refresh.js'></script>
+  <script src='Reload.js'></script>
 
   <!-- hljs theme -->
   <link  href='vendor/highlight-styles/mono-blue.css' rel='stylesheet'>
@@ -26,11 +27,15 @@
 
   <!-- Initializer -->
   <script>
-    Refresh.run({
-      stylusFetcher: Refresh.docPage(['./theme-white/theme.styl.html']),
-      fetcher: Refresh.docPage(['../README.html']),
+    Reload.reload({
+      stylus: './theme-white/theme.styl.html',
+      doc: '../README.html',
       highlight: function (code, value) {
-        return hljs.highlight(value === 'reason' ? 'reasonml' : value, code).value;
+        return hljs.highlight(
+          value === 'reason' ? 'reasonml' :
+          value === 'json' ? 'javascript' : value,
+          code
+        ).value;
       }
     });
   </script>
@@ -39,8 +44,8 @@
   <script src='theme-white/theme.js'></script>
 
   <!-- Meta -->
-  <meta content="Refresh" property="og:site_name">
-  <meta content="Refresh" property="og:title">
+  <meta content="Reload" property="og:site_name">
+  <meta content="Reload" property="og:title">
   <meta content="website" property="og:type">
   <meta content="A rapid project documentation tool" name="description">
   <meta content="A rapid project documentation tool" property="og:description">
@@ -51,10 +56,12 @@
   <script>
     document.body.style="visibility:hidden"
   </script>
+  <!-- https://unsplash.com/photos/Z0uzZSM5i4M -->
   <div class='title-area title-card noselect'>
     <div class='in'>
       <div class='headline'>
-        <h1>pesy</h1>
+        <h6>just</h6>
+        <h1>reload</h1>
         <img src="./animation.svg" alt="Example" style="max-width:100%;">
       </div>
     </div>
@@ -62,7 +69,7 @@
 
   <div class='header'>
     <div class='left'>
-      <h1><a href='./index.html'>pesy</a></h1>
+      <h1><a href='./index.html'>reload</a></h1>
       <ul>
         <li><a href="https://github.com/esy/pesy">GitHub</a></li>
         <li><a href="https://github.com/esy/pesy/issues">Issues</a></li>
