Update npm install command in README

--- a/README.html
+++ b/README.html
@@ -11,7 +11,7 @@ workflow using the package.json itself.
 
 ## Installation
 
-` npm install -g pesy`
+`npm install -g pesy@next`
 
 ## Why pesy?
 `esy` is driven by a package.json to bring the familiar NPM workflow
